# local-code

./: .gitignore  LICENSE
local-code/: CLAUDE.md  Cargo.toml  README.md  agent.md
local-code/config/: default.toml
local-code/docs/: INSTALL.md
local-code/src/: config.rs  lib.rs  main.rs
local-code/src/agent/: compression.rs  context.rs  conversation.rs  core.rs  history.rs  mod.rs  mode.rs  verification.rs
local-code/src/cli/: commands.rs  completion.rs  confirm.rs  mod.rs  output.rs  repl.rs  spinner.rs  ui.rs
local-code/src/llm/: client.rs  mod.rs  streaming.rs  tool_call.rs
local-code/src/skills/: embedded.rs  executor.rs  loader.rs  mod.rs  registry.rs  superpowers.rs  trigger.rs
local-code/src/tools/: mod.rs  registry.rs
local-code/src/tools/bash/: executor.rs  mod.rs
local-code/src/tools/file/: edit.rs  mod.rs  read.rs  write.rs
local-code/src/tools/git/: mod.rs  operations.rs
local-code/src/tools/lsp/: client.rs  mod.rs  operations.rs
local-code/src/tools/search/: glob.rs  grep.rs  mod.rs
local-code/superpowers/: superpowers-bootstrap.local.md
