[package]
name = "local-code"
version = "0.1.0"
edition = "2021"
description = "OLLAMA連携コーディングエージェント - Claude Codeライクなツール"
authors = ["Your Name"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
crossterm = "0.28"
glob = "0.3"
regex = "1.10"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
tower-lsp = "0.20"
lsp-types = "0.95"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
dirs = "5.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
ratatui = { version = "0.30", features = ["crossterm"] }
syntect = "5.2"
rust-embed = "8.2"

[dev-dependencies]

[dependencies.tempfile]
version = "3.10"
